--- a/package.json
+++ b/package.json
@@ -17,12 +17,29 @@
   },
   "homepage": "https://github.com/faceteer/facet#readme",
   "devDependencies": {
-    "eslint": "^7.24.0",
+    "@types/node": "^15.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "aws-sdk": "^2.919.0",
+    "eslint": "^7.27.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.1",
     "eslint-import-resolver-node": "^0.3.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0"
+    "eslint-plugin-standard": "^5.0.0",
+    "prettier": "^2.3.0",
+    "typescript": "^4.3.2"
+  },
+  "peerDependencies": {
+    "aws-sdk": ">=2"
+  },
+  "dependencies": {
+    "@msgpack/msgpack": "^2.7.0",
+    "cbor": "^7.0.5",
+    "crc-32": "^1.2.0"
   }
 }
