--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "strictPropertyInitialization": true,
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": ["jest", "node"]
   },
   "exclude": [
     "node_modules",
