--- a/package.json
+++ b/package.json
@@ -32,14 +32,18 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
+    "jest": "^27.0.6",
+    "jest-junit": "^12.2.0",
     "prettier": "^2.3.0",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.1.0",
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
     "aws-sdk": ">=2"
   },
   "dependencies": {
-    "@faceteer/converter": "^1.0.1",
+    "@faceteer/converter": "^1.0.2",
     "@msgpack/msgpack": "^2.7.0",
     "cbor": "^7.0.5",
     "crc-32": "^1.2.0"
