--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@faceteer/facet",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "",
   "main": "facet.js",
   "scripts": {
