--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,8 @@
   },
   "exclude": [
     "node_modules",
-    "src/__tests__",
-    "src/__mocks__",
+    "lib/__tests__",
+    "lib/__mocks__",
     "dist",
     "./node.d.ts"
   ]
