--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
   },
   "homepage": "https://github.com/faceteer/facet#readme",
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.0.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^15.6.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
-    "aws-sdk": "^2.919.0",
     "codecov": "^3.8.2",
     "eslint": "^7.27.0",
     "eslint-config-google": "^0.14.0",
@@ -58,7 +58,7 @@
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
-    "aws-sdk": ">=2"
+    "@aws-sdk/client-dynamodb": "^3.0.0"
   },
   "dependencies": {
     "@faceteer/converter": "^1.0.4",
