--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Install
         run: npm install
 
+      - name: Test Building Library
+        run: npm run build && npm run build:clean
+
       - name: Run Jest Tests
         run: npm run test:ci
         env:
