--- a/package.json
+++ b/package.json
@@ -1,69 +1,69 @@
 {
-  "name": "@faceteer/facet",
-  "version": "4.0.5",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --runInBand --silent --coverage",
-    "test:ci": "jest --ci --runInBand --silent --coverage && codecov",
-    "build:clean": "tsc -b --clean",
-    "build": "tsc -b --clean && tsc -b",
-    "prepublishOnly": "npm run build"
-  },
-  "engines": {
-    "node": ">=12.4.0"
-  },
-  "keywords": [
-    "DynamoDB"
-  ],
-  "files": [
-    "lib/**/*.js",
-    "lib/**/*.d.ts",
-    "index.js",
-    "index.d.ts"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/faceteer/facet.git"
-  },
-  "author": "Alex McKenzie",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/faceteer/facet/issues"
-  },
-  "homepage": "https://github.com/faceteer/facet#readme",
-  "devDependencies": {
-    "@aws-sdk/client-dynamodb": "^3.0.0",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^15.6.1",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "codecov": "^3.8.2",
-    "eslint": "^7.27.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.1",
-    "eslint-import-resolver-node": "^0.3.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "jest": "^27.0.6",
-    "jest-junit": "^12.2.0",
-    "prettier": "^2.3.0",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.1.0",
-    "typedoc": "^0.22.10",
-    "typescript": "^4.3.2"
-  },
-  "peerDependencies": {
-    "@aws-sdk/client-dynamodb": "^3.0.0"
-  },
-  "dependencies": {
-    "@faceteer/converter": "^2.0.3",
-    "@faceteer/expression-builder": "^2.0.1",
-    "cbor": "^8.1.0",
-    "crc-32": "^1.2.0"
-  }
+	"name": "@faceteer/facet",
+	"version": "4.0.5",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest --runInBand --silent --coverage",
+		"test:ci": "jest --ci --runInBand --silent --coverage && codecov",
+		"build:clean": "tsc -b --clean",
+		"build": "tsc -b --clean && tsc -b",
+		"prepublishOnly": "npm run build"
+	},
+	"engines": {
+		"node": ">=12.4.0"
+	},
+	"keywords": [
+		"DynamoDB"
+	],
+	"files": [
+		"lib/**/*.js",
+		"lib/**/*.d.ts",
+		"index.js",
+		"index.d.ts"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/faceteer/facet.git"
+	},
+	"author": "Alex McKenzie",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/faceteer/facet/issues"
+	},
+	"homepage": "https://github.com/faceteer/facet#readme",
+	"devDependencies": {
+		"@aws-sdk/client-dynamodb": "^3.0.0",
+		"@types/jest": "^27.0.1",
+		"@types/node": "^15.6.1",
+		"@typescript-eslint/eslint-plugin": "^4.26.0",
+		"@typescript-eslint/parser": "^4.26.0",
+		"codecov": "^3.8.2",
+		"eslint": "^7.27.0",
+		"eslint-config-google": "^0.14.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-standard": "^16.0.1",
+		"eslint-import-resolver-node": "^0.3.2",
+		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.4.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-standard": "^5.0.0",
+		"jest": "^27.0.6",
+		"jest-junit": "^12.2.0",
+		"prettier": "^2.3.0",
+		"ts-jest": "^27.0.5",
+		"ts-node": "^10.1.0",
+		"typedoc": "^0.22.10",
+		"typescript": "~4.3.2"
+	},
+	"peerDependencies": {
+		"@aws-sdk/client-dynamodb": "^3.0.0"
+	},
+	"dependencies": {
+		"@faceteer/converter": "^2.0.3",
+		"@faceteer/expression-builder": "^2.0.1",
+		"cbor": "^8.1.0",
+		"crc-32": "^1.2.0"
+	}
 }
