--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 	},
 	"homepage": "https://github.com/faceteer/facet#readme",
 	"devDependencies": {
-		"@aws-sdk/client-dynamodb": "^3.0.0",
+		"@aws-sdk/client-dynamodb": ">=3.0.0 <=3.193.0",
 		"@types/jest": "^27.0.1",
 		"@types/node": "^15.6.1",
 		"@typescript-eslint/eslint-plugin": "^4.26.0",
@@ -58,7 +58,7 @@
 		"typescript": "~4.3.2"
 	},
 	"peerDependencies": {
-		"@aws-sdk/client-dynamodb": "^3.0.0"
+		"@aws-sdk/client-dynamodb": ">=3.0.0 <=3.193.0"
 	},
 	"dependencies": {
 		"@faceteer/converter": "^2.0.3",
