--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,4 +60,4 @@ jobs:
         uses: mikepenz/action-junit-report@v3
         if: always()
         with:
-          files: junit.xml
+          report_paths: ./junit.xml
